--- a/problem3/index.html
+++ b/problem3/index.html
@@ -2,22 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Problem3</title>
   </head>
   <body>
-    <!-- You may reorganise the whole HTML, as long as your form achieves the same effect. -->
-    <form onsubmit="return !1">
-      <h5>Swap</h5>
-      <label for="input-amount">Amount to send</label>
-      <input id="input-amount" />
-
-      <label for="output-amount">Amount to receive</label>
-      <input id="output-amount" />
-
-      <button>CONFIRM SWAP</button>
-    </form>
-    <script src="script.js"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
